// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classy-ui should give group a classname: should give group a classname 1`] = `

import { c, group } from 'classy-ui'

group()

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { c, group } from 'classy-ui';
('group ');

_addClasses([]);


`;

exports[`classy-ui should not throw when using group inside c call: should not throw when using group inside c call 1`] = `

import { c, group } from 'classy-ui'

c(group())

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { c, group } from 'classy-ui';
('group ');

_addClasses([]);


`;

exports[`classy-ui should throw if group was renamed: should throw if group was renamed 1`] = `

import { c, group as g } from 'classy-ui'

c(group())

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown: Composing variabels is only allowed with classnames()
[0m [90m 1 | [39m[36mimport[39m { c[33m,[39m group as g } from [32m'classy-ui'[39m[0m
[0m [90m 2 | [39m[0m
[0m[31m[1m>[22m[39m[90m 3 | [39mc(group())[0m
[0m [90m   | [39m  [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[0m

`;

exports[`classy-ui should throw when nesting c call: should throw when nesting c call 1`] = `

import { c } from 'classy-ui'

c(c('background-color-red-600'))

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown: Duplicating c is not allowed.
[0m [90m 1 | [39m[36mimport[39m { c } from [32m'classy-ui'[39m[0m
[0m [90m 2 | [39m[0m
[0m[31m[1m>[22m[39m[90m 3 | [39mc(c([32m'background-color-red-600'[39m))[0m
[0m [90m   | [39m  [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[0m

`;
